fix/swagger-fix-ticket
